# space-flight-nlu

./: .gitignore  README.md  pyproject.toml  run.sh
src/configs/data_collection/: spaceflight_news_baseline.yaml
src/configs/data_processing/: us_data_processor.yaml
src/data_collection/: fetch_spaceflight_news.py
src/data_processing/: get_full_article_text.py
src/playground/: explore_spaceflight_api.py
